# usdt_monitor_bot

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  .secrets.baseline  ARCHITECTURE_REVIEW.md  BUILD.md  CODE_CHANGES.md  DEBUG_QUICK_REFERENCE.md  DEPLOY.md  Dockerfile  INSTRUMENTATION_SUMMARY.md  Makefile  README.md  RESOURCE_LEAK_AUDIT.md  Taskfile.yml  api.py  baseline.json  collect_diagnostics.sh  config.py  docker-bake.hcl  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml  renovate.json  requirements-dev.in  requirements.txt  storage.py  test_dependencies.py  usdt_monitor_bot.py
.github/workflows/: ci.yml  deploy.yml  docker-image.yml  docker.yml  hadolint.yml  lint.yml  pylint.yml  security.yml  test.yml
docs/: CODE_REVIEW_2026-04-09.md  CODE_REVIEW_2026-05-24.md  README.md  RESOURCE_LEAK_AUDIT.md  SPAM_DETECTOR_DEBUGGING.md
docs/debug/: DEBUG_QUICK_REFERENCE.md  README.md
docs/examples/: README.md  REAL_WORLD_EXAMPLES.md  integration_examples.md
docs/features/: README.md  batch-spam-enrichment.md
docs/features/spam-detection/: README.md  spam_detection_guide.md
docs/guides/: DEPLOY.md  QUICK_START.md  README.md
docs/research/: README.md  RESEARCH_SUMMARY.md
docs/reviews/: 2026-05-24-architecture.md  2026-05-24-performance.md  2026-05-24-security.md
tests/: conftest.py  test_block_tracker.py  test_blockscout.py  test_checker.py  test_database.py  test_etherscan.py  test_handlers.py  test_middleware.py  test_moralis.py  test_notifier.py  test_spam_detector.py  test_spam_detector_debugging.py  test_token_config.py  test_transaction_parser.py  test_utils.py  test_with_fallback.py
usdt_monitor_bot/: block_tracker.py  blockchain_provider.py  blockscout.py  checker.py  config.py  constants.py  database.py  etherscan.py  handlers.py  health.py  main.py  messages.py  middleware.py  moralis.py  notifier.py  spam_detector.py  spam_detector_logging.py  spam_detector_models.py  token_config.py  transaction_parser.py
